fixed the direct to child page issue

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <title>Tacovore V2</title>
 
-    <link rel="stylesheet/less" type="text/css" href="less/main.less?date=2" />
+    <link rel="stylesheet/less" type="text/css" href="less/main.less" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.7.1/less.min.js" ></script>
   </head>
   <body>
